fix: scale game on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,26 +10,26 @@
   user-select: none;
   display: flex;
   flex-flow: column;
-  justify-content: center;
-  align-items: center;
   color: var(--fgc2);
   #wrap {
     position: relative;
     display: flex;
+    align-self: center;
     flex-flow: column;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     font-family: sans-serif;
+    max-width: 90vw;
+    max-height: 90vh;
+    @media screen and (max-width: 1500px) {
+      max-width: 100vw;
+      max-height: 100vh;
+    }
   }
 
   canvas {
     height: auto;
-    max-width: 90vw;
-    max-height: 90vh;
     background-color: var(--bgc);
-  }
-  #game-canvas {
-    border: 3px solid var(--fgc2);
   }
   .menu {
     display: flex;
@@ -69,6 +69,8 @@
     white-space: pre-wrap;
     text-align: center;
     font-size: 2vmin;
+    display: flex;
+    align-self: center;
   }
 
   #hamburger,
@@ -198,11 +200,13 @@
   }
 
   #level-dialog {
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     border-radius: 4px;
     border: 1px solid white;
     background-color: #121212ee;
+    display: flex;
+    align-self: center;
   }
   .bonus-item {
     cursor: pointer;
